Domibus 3.3-FR
- Block the receiving of the message in case the sender's certificate is not valid or revoked.
Two more properties were added (for more details check domibus.properties file):
    o domibus.sender.certificate.validation.onsending=true
    o domibus.sender.certificate.validation.onreceiving=true
Renamed "domibus.senderparty.trust.verification" to "domibus.sender.trust.validation.onreceiving". Default value "false" has not been changed.
Renamed "domibus.certificate.validation.enabled" to "domibus.receiver.certificate.validation.onsending". Default value "true" has not been changed.
Domibus 3.3-RC1
- Configuration of Domibus is done with domibus.properties instead of externalized spring xml files
- Add the possibility to pull messages
- Expose the DOWNLOADED message status in the plugin API and the default ws plugin
- Deprecated the methods eu.domibus.plugin.AbstractBackendConnector.getMessageStatus(String messageId) and eu.domibus.plugin.handler.MessageRetriever.getMessageStatus(String messageId) which converts the DOWNLOADED status to RECEIVED. Use the new getStatus(String messageId) method instead.
- Deprecated the following methods from eu.domibus.plugin.webService.impl.BackendWebServiceImpl in the Default WS Plugin:
    o sendMessage(SubmitRequest, Messaging). Use submitMessage(SubmitRequest, Messaging) which add support for large files.
    o downloadMessage(RetrieveMessageRequest, Holder, Holder). Use retrieveMessage(RetrieveMessageRequest, Holder, Holder) which add support for large files.
    o getMessageStatus(StatusRequest). Use getStatus(StatusRequest) which converts the DOWNLOADED status to RECEIVED.
- Migrated the logging framework to SLF4J and Logback
- Domibus uses 3 logs files: domibus.log, domibus-business.log and domibus-security.log
- JMS monitoring: fixed the computation of the total number of messages in the queue for WebLogic